refactor:使用BaseActivity实现字体缩放